--- a/_posts/react-table-component/index.mdx
+++ b/_posts/react-table-component/index.mdx
@@ -7,7 +7,7 @@ tag: 'react'
 
 最近遇到一个业务上的需求，实现一个选择器组件，组件的需求大致如下图：
 
-<img src='/assets/table.png'/>
+<img className='w-full sm:w-full md:w-2/3' src='/assets/table.png'/>
 
 ### 代码实现
 
