--- a/_posts/object-opp/index.mdx
+++ b/_posts/object-opp/index.mdx
@@ -171,10 +171,10 @@ MDN官网对用Object.defineProperty的介绍
 > 拥有布尔值的键 configurable、enumerable 和 writable 的默认值都是 false。
 > 属性值和函数的键 value、get 和 set 字段的默认值为 undefined。
 
-<div style={{width: '100%',
+<div className='w-full sm:w-full md:w-2/3' style={{
             overflow: 'auto',
 }}>
-  <table style={{ 
+  <table  style={{ 
                   width:'100%',
                   borderCollapse: 'collapse',
                  borderSpacing: 0,emptyCells: 'show',
